tests/miniJava/neg/000048_mutation.MiniJava
class java { class static void Main ( String [ ] java ) { { } } }
